2-ingress/apple-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple
        image: hashicorp/http-echo
        args:
         - "-text=apple"
        ports:
        - containerPort: 5678
