2-ingress/banana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana
        image: hashicorp/http-echo
        args:
         - "-text=banana" 
        ports:
        - containerPort: 5678
