2-ingress/apple-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service  
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5678    
  selector:
    app: apple
