2-ingress/banana-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  labels:
    app: banana
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5678    
  selector:
    app: banana
