2-ingress/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test1-ingress-nginx
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
      - path: /apple
        backend: 
          serviceName: apple-service
          servicePort: 80
      - path: /banana
        backend:
          serviceName: banana-service
          servicePort: 80
